Drop kronotop-common module